# svg2png

./: .gitignore  README.md  pyproject.toml  setup.py  svg2png.py
src/svg2png/: __init__.py  api.py  errors.py  renderer.py
svg2png/: __init__.py  errors.py  renderer.py  svg2png.py
