[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "svg2png"
dynamic = ["version"]
dependencies = [
	"lxml",
	"pillow"
]
authors = [
	{name = "RFSDev"}
]
description = "Render SVG into PNG"
readme = "README.md"
license = "GPL-2.0-only"
license-files = ["LICENSE"]
keywords = [
	"svg",
	"png",
	"render",
	"image",
	"graphics",
	"vector"
]
classifiers = [
	"Development Status :: 3 - Alpha", # "Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Topic :: Multimedia",
	"Topic :: Multimedia :: Graphics",
	"Topic :: Multimedia :: Graphics :: Graphics Conversion",
	"Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
	"Topic :: Software Development :: Libraries",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Text Processing :: Markup :: XML",
	"Topic :: Utilities",
	"Typing :: Typed",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3"
]

[project.urls]
Repository = "https://github.com/foxypiratecove37350/svg2png"
Issues = "https://github.com/foxypiratecove37350/svg2png/issues"
Homepage = "https://github.com/foxypiratecove37350/svg2png"

[tool.setuptools_scm]
